k8s/categories/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories
spec:
  replicas: 1
  selector:
    matchLabels:
      app: categories
  template:
    metadata:
      labels:
        app: categories
    spec:
      containers:
        - name: categories
          image: blackberryv/categories-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
