k8s/categories/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: categories-service
spec:
  ports:
    - port: 8080
  selector:
    app: categories
