k8s/categories/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: categories-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: categories-service
                port:
                  number: 8080
            path: /categories
